<resources>
    <string name="app_name">Delhi Darbar Restaurants</string>
    <string name="user_name">User name</string>
    <string name="hint_name">Name</string>
    <string name="password"><font size="15">Password</font></string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Please_enter_the_name">Please enter the name</string>
    <string name="Please_enter_the_email">Please enter the email</string>
    <string name="Please_enter_the_email_valid_email">Please enter a valid Email</string>
    <string name="Please_enter_the_email_the_number">Please enter the number</string>
    <string name="Please_enter_the_password">Please enter the Password</string>
    <string name="Please_enter_valid_password">Please enter at least 6 chracters</string>
    <string name="password_dosnt_match">Please check your password </string>
    <string name="Login">"Login "</string>
    <string name="Forgot_password">Forgot Password?</string>
    <string name="Or">Or</string>
    <string name="You_did_not_allowed_permisson">You didn`t allow the app to access gallery and you wont be able to let him select from gallery</string>
    <string name="facebook_app_id">1734425426864599</string>
    <string name="fb_login_protocol_scheme">fb1734425426864599</string>
    <string name="map_api_key">AIzaSyDncjaEWIjp1gnFXMeEqB7xAHtYfsrX9u4</string>
    <string name="Login_Failed">Login Failed</string>
    <string name="please_continue">Continue</string>
    <string name="dont_have_account">Don\'t Have An Account?<b> Sign Up</b></string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Choose_your_location">Choose Your Location</string>
    <string name="Select_Options">Choose Your Location</string>
    <string name="Capture_image">Capture Image</string>
    <string name="Pick_from_gallery">Pick from gallery</string>
    <string name="User_Already_exist">User Already Exist</string>
    <string name="Invalid_credentialst">Invalid Credentials</string>
    <string name="An_email_will_be">An email will be sent to your account with the new temporary password. Please check your email.</string>
    <string name="enter_your_loction">Enter your Location</string>
    <string name="Use_current_location">Use Current Location</string>
    <string name="location_msg">To access the full feature of the app location is required</string>
    <string name="location_title">Location Permission</string>
    <string name="select_restaurent">Select Restaurant</string>
    <string name="select_resaurent_nearest_to_you"> We have 3 branches. Please select nearest to you.</string>
    <string name="you_can_change_your_pref_later"> You can change your\n preference later also.</string>
    <string name="Next"> Next</string>
    <string name="really_exit">Really Exit?</string>
    <string name="do_u_want_to_sure">Are you sure you want to exit?</string>
    <string name="first_order">First order</string>
    <string name="_40_off">40% off</string>
    <string name="code_delhid">Code: DELHID</string>
    <string name="discount_upto_5">Disscount up to 5 €</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="hello">Hello</string>
    <string name="alert_internetConnection">Check your Internet Connection.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="no_address_found">No Address Found!! Do you want to add</string>
    <string name="Cancel">Cancel</string>
    <string name="OFF">OFF</string>
    <string name="Code">Code</string>
    <string name="discount_upto">Discount upto</string>
    <string name="Please_enter_location">Please enter location</string>
    <string name="view_cart">View Cart</string>
    <string name="costa_adeje"><u>Costa Adeje</u></string>
    <string name="your_address_here"><u>Your Address Here</u></string>
    <string name="restaurant_address">Restaurant address</string>
    <string name="item_total">Item Total</string>
    <string name="starters">Starters</string>
    <string name="have_a_coupon">Have a Coupon</string>
    <string name="add_special_instructions">Add Special Instructions...</string>
    <string name="personal_details">Personal Details</string>
    <string name="name_phone_number">Name,Phone Number</string>
    <string name="delivery_address">Delivery address</string>
    <string name="add_payment_method">Delivery Option</string>
    <string name="pay_now">Pay Now</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="party">Party</string>
    <string name="book">Book</string>
    <string name="orders">Orders</string>
    <string name="reviews">Reviews</string>
    <string name="addresses">Addresses</string>
    <string name="request_time_out_error">Request time out error</string>
    <string name="Price_symbol" translatable="false">€</string>
    <string name="please_add_review_here">Please add review here...</string>
    <string name="recent_locations">Recent Locations</string>
    <string name="do_u_want_to_change_address">Do you want to change Address?</string>
    <string name="do_u_want_to_add_address">Do you want to add Address</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="orders_once_placed_cannot_be_canceled_because_restaurant_starts_preparing_the_food_as_soon_as_they_receive_the_order">Orders once placed cannot be canceled because restaurant starts preparing the food as soon as they receive the order</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="access_full_feature_of_app">Do you want to access the full feature of the DelhiDarbar</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="permission_required">Permission required</string>
    <string name="update_profile_image">Update Profile Image</string>
    <string name="Take_Photo_Camera">Upload from Camera</string>
    <string name="Take_Photo_Gallery">Upload Photo Gallery</string>
    <string name="did_you_like_service">Did you like our Service?</string>
    <string name="let_us_know_what_you_think">Let us know what you think</string>
    <string name="do_let_us_know_your_thoughts">Do let us know your thoughts. Your feedback matters!</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="skip_button_clicked">Skip button clicked!</string>
    <string name="ur_feed_back_important_for_us">Your feedback is important  for us</string>
    <string name="place_order">Place Order</string>
    <string name="opps_no_more_item_found">Opps !! No item in your cart</string>
    <string name="grand_total">Grand Total</string>
    <string name="select_category">Category</string>
    <string name="sure_to_delete_addres">are you sure want to delete  address</string>
    <string name="order_places_success">Your Order has been Placed</string>
    <string name="number_of_persons">Number of persons.</string>
    <string name="book_a_table">Book a table</string>
    <string name="contact_details">Contact Details</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="customize">Select</string>
    <string name="ingredient_selected">Ingredients :</string>
    <string name="spice_level">Spice Level :</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="Select_ingredients">Choose Ingredients</string>
    <string name="Choose_spice">Choose Spice Level</string>
    <string name="Cost">Cost</string>
    <string name="Sauce_type">Choose Sauce Type</string>
    <string name="choose_types">Choose Types</string>
    <string name="choose_type">Choose Type</string>
    <string name="Choose_size">Choose Size</string>
    <string name="Quantity">Quantity</string>
    <string name="add_on">Add Ons :</string>
    <string name="Forgot_password1">Forgot Password</string>
    <string name="no_item_found.">No Item found!</string>
    <string name="Please_try_again_later.">Please try again later.</string>
    <string name="we_have">We have</string>
    <string name="branches">branches in \n Tenerife. Please scroll to select\n nearest branch to you.</string>
    <string name="creditcard">Credit/ debit card</string>
    <string name="cashOnDelivery">Cash On Delivery</string>
    <string name="pay">Pay</string>
    <string name="paypal">Pay Pal</string>
    <string name="cardOnDelivery">Pay by Card on Delivery</string>
    <string name="change_language">Change Language</string>
    <string name="please_rate_order">Please Rate Your Order</string>
    <string name="write_few_words">Write few words about the order</string>
    <string name="order_placed">Your order has been placed</string>
    <string name="failed_token">Client Failed to retrieve token from server</string>
    <string name="BraintreeFragment_initialized">BraintreeFragment is ready to use</string>
    <string name="issues_with_authorization">There was an issue with your authorization string</string>
    <string name="token_failed">Fail to retrieve client token </string>
    <string name="remove">Remove</string>
    <string name="res_closed">Oops! Restaurant is not available for bookings at this time.</string>
    <string name="select_rest_first">Please select restaurant first!</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="select_address_type">Please select address type</string>
    <string name="do_u_want_to_change_restaurant">Do you want to change Restaurant?</string>
    <string name="item_added">Item Added</string>
    <string name="items_added">Items Added</string>
    <string name="item_removed">Item Successfully removed from cart.</string>
    <string name="Please_enter_date">Please select date</string>
    <string name="Please_enter_time">Please select time</string>
    <string name="Please_select_restaurant">Please select restaurant</string>
    <string name="product_quantity_limit_reached">Product quantity limit reached for this order</string>
    <string name="btn_done">Done</string>
    <string name="sign_out">Sign Out</string>
    <string name="choose_wines">Choose Wines</string>
    <string name="choose_drinks">Choose Drinks</string>
    <string name="order_greater">Please add items in cart.</string>
    <string name="minimum_qty">A minimum of 15€ is required to place order.\nCurrent cart total is :</string>
    <string name="search">Search</string>
    <string name="veg">VEG</string>
    <string name="vegan">VEGAN</string>
    <string name="all">All</string>
    <string name="edit">Edit</string>
    <string name="agree_to_our">By joining you agree to our <b><u>Privacy Policy</u></b></string>
    <string name="Please_enter_phone">Please enter phone number</string>
    <string name="update_phone">Please update your phone number to place order.</string>
</resources>