<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/splashlogo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/pop_bold"
            android:gravity="center"
            android:padding="@dimen/_6sdp"
            android:text="@string/Choose_your_location"
            android:textColor="@color/edit_text_color"
            android:textSize="@dimen/ButtonTextSize" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edt_EnterLocation_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/location_edit_text"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:fontFamily="@font/pop_regular"
                android:gravity="center"
                android:hint="@string/enter_your_loction"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:textSize="@dimen/NormalTextSize" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hint_color"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_userCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/location_edit_text"
            android:drawableStart="@drawable/ic_gps_not_fixed_black_24dp"
            android:fontFamily="@font/pop_regular"
            android:gravity="center"
            android:hint="@string/Use_current_location"
            android:maxLines="1"
            android:padding="8dp"
            android:ellipsize="end"
            android:drawablePadding="5dp"
            android:textColor="#0C0202"
            android:textSize="@dimen/NormalTextSize" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/hint_color"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"/>

            <RadioButton
                android:id="@+id/office"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/office"/>

        </RadioGroup>

    </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_centerInParent="true">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/button_round_shape"
                    android:fontFamily="@font/pop_regular"
                    android:text="@string/Cancel"
                    android:textColor="@color/button_color" />

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_round_shape"
                    android:fontFamily="@font/pop_regular"
                    android:text="@string/ok"
                    android:textColor="@color/button_color" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>

