<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_min_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pop_regular"
            android:gravity="center"
            android:text="@string/update_phone"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/NormalTextSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/ButtonSize"
                android:layout_weight=".5"
                android:text="@string/cancel"
                android:textSize="@dimen/NormalTextSize"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_round_shape"/>

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="0dp"
                android:layout_height="@dimen/ButtonSize"
                android:layout_marginLeft="15dp"
                android:text="@string/please_continue"
                android:textSize="@dimen/NormalTextSize"
                android:textColor="@color/colorWhite"
                android:layout_weight=".5"
                android:background="@drawable/button_round_shape"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>