<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pop_bold"
            android:gravity="center"
            android:hint="@string/please_rate_order"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:stepSize="1"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/edt_specialInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pop_regular"
            android:gravity="left|center_horizontal"
            android:background="@drawable/button_less_round_shape_light_grey"
            android:scrollbars="vertical"
            android:overScrollMode="always"
            android:minLines="5"
            android:padding="12dp"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:textColorHint="@color/hint_color"
            android:hint="@string/write_few_words"
            android:textSize="@dimen/_13ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:background="@drawable/squre_button"
                android:text="@string/Cancel"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/NormalTextSize" />

            <Button
                android:id="@+id/btn_done"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight=".5"
                android:background="@drawable/bg_button"
                android:text="@string/btn_done"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/NormalTextSize" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>