<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="14dp"
    android:layout_gravity="center"
    android:background="#feeddf"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-33dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/_31sdp"
            android:layout_height="@dimen/_31sdp"
            android:layout_gravity="left"
            android:src="@drawable/ic_navigate_before_black_24dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_39sdp"
            android:fontFamily="@font/abril_font"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/Forgot_password1"
            android:textColor="@color/black"
            android:textSize="@dimen/TitleTextSize" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/pop_regular"
            android:gravity="center"
            android:text="@string/An_email_will_be"
            android:textColor="@color/edit_text_color"
            android:textSize="@dimen/SmallTextSize"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:hintEnabled="false"
            app:hintTextAppearance="@style/TextLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDialouge_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ButtonSize"
                android:fontFamily="@font/pop_regular"
                android:inputType="textPersonName"
               
                android:hint="@string/Please_enter_the_email"
                android:background="@drawable/custom_login_edittxt"
                android:maxLines="1"
                android:textSize="@dimen/NormalTextSize"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textColorHint="@color/hint_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_Continue"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="@dimen/ButtonSize"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_round_shape"
            android:fontFamily="@font/muktavaani"
            android:gravity="center"
            android:text="@string/please_continue"
            android:textColor="@color/button_color"
            android:textSize="@dimen/NormalTextSize" />


    </LinearLayout>


</ScrollView>